docs(api): update tags for swagger docs
