# app/Http/Controllers/Api/V1/DocController.php
@@ -27,34 +27,39 @@ namespace App\Http\Controllers\Api\V1;
  *
  *
  * @OA\Tag(
- *     name="ad type",
+ *     name="🏷️ Type d'annonce",
  *     description="Gestion des types d'annonces"
  * )
  *
  * @OA\Tag(
- *     name="city",
+ *     name="🏙️ Ville",
  *     description="Gestion des villes"
  * )
  *
  * @OA\Tag(
- *      name="auth",
+ *      name="🔐 Authentification",
  *      description="Gestion de l'authentification"
  *  )
  *
  * @OA\Tag(
- *       name="user",
+ *       name="👤 Utilisateur",
  *       description="Gestion des utilisateurs"
  * )
  *
  * @OA\Tag(
- *        name="quarter",
+ *        name="📍 Quartier",
  *        description="Gestion des quartiers"
  * )
  *
  * @OA\Tag(
- *         name="Annonces",
+ *         name="🏠 Annonces",
  *         description="Gestion des annonces"
  * )
+ *
+ * @OA\Tag(
+ *          name="🔍 Filtre",
+ *          description="Filtrer les annonces"
+ *  )
  */
 class DocController
 {
